# tgm

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  app.py
src/core/: protocol.py
src/core/models/: __init__.py  user.py
src/screens/: _base.py
src/screens/login/: __init__.py  events.py  screen.py  steps.py
tgm/: __main__.py  app.py
tgm/config/: __init__.py  dirs.py  keybindings.py  settings_store.py  themes.py
tgm/controllers/: __init__.py  _auth.py  _channels.py  _media.py  _messaging.py  _settings.py
tgm/core/: __init__.py  app_context.py  client_events.py  protocol.py  store.py
tgm/core/models/: __init__.py  channel.py  messages.py  user.py
tgm/dev/: __init__.py  mock_client.py
tgm/media/: avatar.py
tgm/screens/: __init__.py
tgm/screens/chat/: events.py  file_picker.py  info.py  screen.py
tgm/screens/login/: __init__.py  screen.py
tgm/screens/search/: __init__.py  events.py  screen.py
tgm/screens/settings/: __init__.py  channel_item_settings.py  events.py  key_capture.py  screen.py  settings_section.py
tgm/static/styles/: style.tcss
tgm/widgets/: emoji_ac.py  search_bar.py
tgm/widgets/channels/: __init__.py  events.py  list.py  preview.py
tgm/widgets/emoji/: __init__.py  autocomplete.py  data.py  picker.py
tgm/widgets/input/: __init__.py  bar.py  events.py  reply_bar.py
tgm/widgets/messages/: __init__.py  bubble.py  events.py  list.py  markdown.py  renderer.py
