[project]
name = "tgm"
version = "0.1.0"
description = ""
authors = [{ name = "To Kyrylo", email = "to.kyrylo@proton.me" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = ["telethon (>=1.43.2,<2.0.0)", "textual (>=8.2.7,<9.0.0)"]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
