[project]
name = "tgm"
version = "0.1.0"
description = ""
authors = [{ name = "To Kyrylo", email = "to.kyrylo@proton.me" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = ["telethon (>=1.43.2,<2.0.0)", "textual (>=8.2.7,<9.0.0)", "pillow (>=12.2.0,<13.0.0)"]

[project.scripts]
tgm = "tgm.__main__:main"
tgm-mock = "tgm.dev:run_mock"

[tool.poetry]
packages = [{ include = "tgm" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
